updated dashboard style and edit user profile page

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -34,6 +34,8 @@
   align-items: center;
   //display: flex;
   justify-content: center;
+  padding-right: 15px;
+  padding-left: 15px;
 //  width: 70px;
   &:hover{
     cursor: pointer;
