--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,37 @@
-<body style="background: url('<%= image_path "arches.png" %>');">
+<!-- <body style="background: url('<%= image_path "arches.png" %>');">
+ -->
+  <div class="text-center user_profile">
+    <h1> Hello <%= @user.first_name %> </h1>
+
+<!--     <%= image_tag @user.photo, :class => "style_image" %>
+ -->
+    <% avatar_url = current_user.facebook_picture_url || current_user.photo.url %>
+    <% if avatar_url.nil? %>
+      <% avatar_url = image_path("blank_avatar.jpg") %>
+    <% end %>
+    <%= image_tag avatar_url, class: "style_image" %>
+
+    <div class="edit_profile_button"><%= link_to "Edit Profile", edit_user_path(current_user), class: "globegetter-button-pink" %></div>
+  </div>
+
   <div class="dashboard-container">
-    <div class="dashboard-item">
-      <%= image_tag current_user.photo, height: 300, width: 400, crop: :fill %>
-      <h1> Hello <%= @user.first_name %> </h1>
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item">
+      <h3> Your goal is to visit <%= @user.number_countries %> countries over the next <%= @user.years %> years. Keep up the hard work! </h3>
     </div>
-    <div class="dashboard-item">
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1488646953014-85cb44e25828?auto=format&fit=crop&w=933&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item">
+      <h3> Your goal is to visit <%= @user.number_countries %> countries over the next <%= @user.years %> years. Keep up the hard work! </h3>
+    </div>
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1496950866446-3253e1470e8e?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item">
+      <h3> Your goal is to visit <%= @user.number_countries %> countries over the next <%= @user.years %> years. Keep up the hard work! </h3>
+    </div>
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1487581424120-18f3611a63e6?auto=format&fit=crop&w=1026&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item">
       <h3> Your goal is to visit <%= @user.number_countries %> countries over the next <%= @user.years %> years. Keep up the hard work! </h3>
     </div>
 
     <% denomenator = @user.years.to_f %>
-
     <% if !@destinations.where(status: 1).empty? %>
       <% numerator = @user.number_countries.to_f - @destinations.where(status: 1).length%>
     <% else %>
@@ -17,15 +39,16 @@
     <% end %>
     <% result = numerator/denomenator %>
 
-    <div class="dashboard-item">
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('/assets/dashboard_travel_journal-3fab72c0cc96efe62475fff4698804acbe498930aff39ab57dbea57edffd2393.jpg'); background-size: cover;" class="dashboard-item">
       <h3>So far, you have visited <%= @destinations.where(status: 1).length %> countries out of your goal of <%= @user.number_countries %></h3>
     </div>
-    <div class="dashboard-item">
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1497302347632-904729bc24aa?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item">
       <h3> If you visit about <%= result.round %> countries every year, you will complete your goal! </h3>
     </div>
 
       <% if !@destinations.where(status: 3).empty? %>
-        <div class="dashboard-item">
+        <div style="background: linear-gradient(45deg, rgba(255,42,107, 0.8), rgba(255, 255, 255, 0.2) ); background-size: cover;" class="dashboard-item">
           <h3> Here are your priority countries: </h3>
           <div class="scrolling-wrapper">
           <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 3) %>
@@ -34,7 +57,7 @@
       <% end %>
 
       <% if !@destinations.where(status: 2).empty? %>
-        <div class="dashboard-item">
+        <div style="background: linear-gradient(45deg, rgba(255,42,107, 0.8), rgba(255, 255, 255, 0.2) ); background-size: cover;" class="dashboard-item">
           <h3> Here is a list of places you would like to visit.</h3>
           <div class="scrolling-wrapper">
             <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 2) %>
@@ -43,16 +66,14 @@
       <% end %>
 
       <% if !@destinations.where(status: 1).empty? %>
-        <div class="dashboard-item">
+        <div style="background: linear-gradient(45deg, rgba(255,42,107, 0.8), rgba(255, 255, 255, 0.2) ); background-size: cover;" class="dashboard-item">
           <h3> And here is a list of places you have been!</h3>
           <div class="scrolling-wrapper">
             <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 1) %>
           </div>
         </div>
       <% end %>
-
-
-    <div class="dashboard-item">
+<!--     <div class="dashboard-item">
       <div class="pie">
         <div class="slice-right"></div>
         <div class="slice-left"></div>
@@ -60,7 +81,5 @@
           <div class="number">75%</div>
         </div>
       </div>
-    </div>
-
+    </div> -->
   </div>
-</body>
