--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -59,6 +59,10 @@
   }
 }
 
+input[type="file"] {
+  text-align: center;
+}
+
 .control-label  {
   color: rgba(255,255,255,1);
   font-size: 23px;
@@ -80,6 +84,7 @@
 form p.help-block {
   font-size: 1em;
 }
+
 
 
 
