--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,7 @@
           I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]}, label: false %> countries in
           <%= f.input :years, input_html: {value: params[:years]}, label: false %> years.
         </div>
+          <%= f.input :photo, class: "text-center" %>
           <%= f.input :first_name, required: true, autofocus: true %>
           <%= f.input :last_name, required: true, autofocus: true %>
           <%= f.input :email, required: true, autofocus: true %>
