--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,14 +17,14 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
+          <% avatar_url = current_user.facebook_picture_url || current_user.photo.url %>
+          <% if avatar_url.nil? %>
+            <% avatar_url = image_path("blank_avatar.jpg") %>
+          <% end %>
+          <%= image_tag avatar_url, class: "navbar-wagon-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
 
           <!-- # placeholder avatar -->
-          <%= image_tag 'Lucia.jpg', class: "navbar-wagon-avatar dropdown-toggle", id: "navbar-wagon-menu",
-          "data-toggle" => "dropdown" %>
-
-          <!-- # commented out avatar which will have to be fixed-->
-<!--           <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
-          <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu",
+          <!-- <%= image_tag 'Lucia.jpg', class: "navbar-wagon-avatar dropdown-toggle", id: "navbar-wagon-menu",
           "data-toggle" => "dropdown" %> -->
 
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
