gixed photo uploader

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.error_notification %>
 
         <div class="goal-set">
-          I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]}, label: false %> countries in
+          I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]}, label: false %> countries over
           <%= f.input :years, input_html: {value: params[:years]}, label: false %> years.
         </div>
           <%= f.input :photo, class: "text-center" %>
