--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to destination_select_path, class: "navbar-wagon-item-user navbar-wagon-link" do %><i class="fa fa-globe"></i> Destination<% end %>
+      <%= link_to destination_select_path, class: "navbar-wagon-item-user navbar-wagon-link" do %><i class="fa fa-globe"></i> Destinations<% end %>
       <%= link_to map_path, class: "navbar-wagon-item-user navbar-wagon-link" do %><i class="fa fa-map-marker"></i> Map<% end %>
       <%= link_to user_path(current_user), class: "navbar-wagon-item-user navbar-wagon-link" do %><i class="fa fa-tachometer"></i> Dashboard<% end %>
 
