fixed in to over

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <h1 class="homepage-margin">The world has 195 countries. How many do you want to visit?</h1>
       <form>
         <div class="goal-set form-bottom-margin">
-          I want to visit <input type="number" name="countries"> countries in <input type="number" name="years"> years.
+          I want to visit <input type="number" name="countries"> countries over <input type="number" name="years"> years.
         </div>
         <div class="goal-set"><input type="submit" value="Start My Journey" formaction="<%= new_user_registration_path %>"></div>
       </form>
