styled country page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
-@import "navbar";
-@import "show_page";
-@import "card";
 @import "banner";
 @import "buttons";
-@import "form";
-@import "footer";
+@import "card";
 @import "continent";
+@import "dashboard";
+@import "flexbox_elements";
+@import "footer";
+@import "form";
+@import "navbar";
 @import "sidebar";
-@import "show_page";
