--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @country.name %></h1>
-
+<%= cl_image_tag @country.photo.url %>
 <% if @country.average_rating > 0 %>
   <p>Average Rating: <%= @country.average_rating %></p>
 <% else %>
