--- a/app/assets/stylesheets/components/_flexbox_elements.scss
+++ b/app/assets/stylesheets/components/_flexbox_elements.scss
@@ -1,5 +1,6 @@
 .dashboard-container {
-  margin-bottom: 2vh;
+  padding-bottom: 1vh;
+  padding-top: 1vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -89,11 +90,10 @@
   background-color: white;
   color: black !important;
   p {
+    margin-top: 10px;
+    margin-bottom: 5px !important;
     color: black;
     font-weight: 300;
-  }
-  .notes-border {
-    margin-top: 20px !important;
   }
 }
 
@@ -123,8 +123,28 @@
   margin: 5vh;
 }
 
+.user-destinations-card {
+  text-align: center;
+  //background: lighten($pink, 10%);
+  background-color: white;
+  color: #333;
+  border-width: 2px 0px 0px 0px;
+  border-color: ($pink);
+  border-style: solid;
+  margin-bottom: 1vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  font-weight: normal;
+  font-family: 'Maven Pro', 'sans-serif' !important;
+  font-size: x-large;
 
-
+  p {
+    margin-top: 2vh;
+  }
+  &:last-child {
+    margin-bottom: 3vh;
+  }
+}
 
 
 
