--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,10 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #001745;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$pink: rgba(255,42,107, 1);
