--- a/app/assets/stylesheets/pages/destination_select.scss
+++ b/app/assets/stylesheets/pages/destination_select.scss
@@ -2,28 +2,57 @@
   display: flex;
   align-items: space-between;
   flex-direction: row;
-  position: absolute;
   top: 70px;
-  &>div {
+  max-width: 75vw;
+  .display-lists {
     padding: 2vh 1vw;
+    text-align: center;
   }
 }
 
 .sidebar {
-  width: 20vw;
+  width: 25vw;
   min-height: 100vh;
   background-color: rgba(210, 210, 210, 0.54);
   color: #282828;
   box-shadow: 0 0 2px rgba(118, 118, 118, 0.78);
+  display: flex;
+  flex-direction: column;
   h3 {
-    font-family: 'Lato', 'sans-serif' !important;
+    font-family: 'Maven Pro', 'sans-serif' !important;
     //border-bottom: solid 1px black;
     box-shadow: 0 0 2px -2px rgba(118, 118, 118, 0.78);
+    //text-transform: uppercase;
+    color: #FEFEFE;
+    text-align: center;
+    font-size: 1em;
+    font-weight: lighter;
+  }
+  a {
+    font-weight: normal;
+  }
+  .card {
+    height: 10vw;
+    width: 20vw;
+    border: solid 1px rgba(255,255,255,0.5);
+    //border: none !important;
+  }
+  .status-section:nth-child(1) {
+    //border: solid 2px lighten($pink, 10%);
+    background-color: lighten($pink, 10%) ;
+  }
+  .status-section:nth-child(2) {
+    //border: solid 2px lighten($pink, 20%);
+    background-color: lighten($pink, 20%);
+  }
+  .status-section:nth-child(3) {
+    //border: solid 2px lighten($pink, 30%);
+    background-color: lighten($pink, 30%);
   }
 }
 
 .display-lists {
-  width: 80vw;
+  width: 75vw;
   h2 {
     font-family: 'Maven Pro', 'sans-serif' !important;
   }
