--- a/app/views/countries/_card.html.erb
+++ b/app/views/countries/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);">
+<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)), url('https://picsum.photos/600/400?image=<%= (1..200).to_a.sample(1)[0] %>');">
     <div class="card-category"></div>
     <div class="card-description">
       <h2>   <%= link_to card.name, country_path(card) %></h2>
