Ajax in progress

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -13,11 +13,11 @@
 
 
 <div id="destinations">
-  <% if @destination.nil? %>
+  <% if @destination.empty? %>
   <% %>
   <%elsif @destination.first.notes.nil? %>
     Feel free to add a note for  <%= @country.name %>
-    <%= simple_form_for([@country, @destination.first], method: :patch) do |f| %>
+    <%= simple_form_for([@country, @destination.first], remote: true, method: :patch) do |f| %>
     <%= f.input :notes, label: false %>
     <%= f.input :status, as: :hidden %>
     <%= f.submit class: "btn btn-primary" %>
