--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -3,5 +3,9 @@
   <div class="sidebar">
     <%= render partial: 'destinations/display_lists', locals: {destinations: @destinations} %>
   </div>
+    <%= form_tag(countries_path, method: :get) do %>
+    <%= text_field_tag :query %>
+    <%= submit_tag 'Search' %>
+    <% end %>
     <%= render partial: 'countries/display_lists', locals: {countries: @countries} %>
 </div>
