--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,17 +1,18 @@
 <div id="map" style="width: 100%; height: 600px;"></div>
 
 <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    var handler = Gmaps.build('Google');
-    handler.buildMap({ internal: { id: 'map' } }, function() {
-      markers = handler.addMarkers(<%= raw @hash.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-      if (markers.length == 0) {
-        handler.getMap().setZoom(2);
-      } else if (markers.length == 1) {
-        handler.getMap().setZoom(14);
-      }
+  <script>
+    markers_json = <%=raw @hash.to_json %>;
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+     markers = handler.addMarkers(markers_json);
+     handler.bounds.extendWith(markers);
+     for (var i = 0; i < markers.length; i++) {
+        google.maps.event.addListener(markers[i].serviceObject, 'click', function(event) {
+          window.open(this.title);
+        });
+     }
+     handler.fitMapToBounds();
     });
-  <% end %>
+  </script>
 <% end %>
