--- a/app/assets/stylesheets/pages/destination_select.scss
+++ b/app/assets/stylesheets/pages/destination_select.scss
@@ -13,20 +13,28 @@
 .sidebar {
   width: 25vw;
   min-height: 100vh;
-  background-color: rgba(210, 210, 210, 0.54);
+  //background-color: rgba(210, 210, 210, 0.54);
+  background-color: white;
   color: #282828;
   box-shadow: 0 0 2px rgba(118, 118, 118, 0.78);
   display: flex;
   flex-direction: column;
+  //margin-top: 5px;
   h3 {
     font-family: 'Maven Pro', 'sans-serif' !important;
     //border-bottom: solid 1px black;
     box-shadow: 0 0 2px -2px rgba(118, 118, 118, 0.78);
     //text-transform: uppercase;
-    color: #FEFEFE;
+    color: #333;
     text-align: center;
-    font-size: 1em;
-    font-weight: lighter;
+    font-size: x-large;
+    font-weight: 400;
+    margin-top: 15px !important;
+    margin-bottom: 0px;
+    border-width: 0px 0px 3px 0px;
+    border-color: ($pink);
+    border-style: solid;
+    padding-bottom: 5px;
   }
   a {
     font-weight: normal;
@@ -37,18 +45,30 @@
     border: solid 1px rgba(255,255,255,0.5);
     //border: none !important;
   }
-  .status-section:nth-child(1) {
-    //border: solid 2px lighten($pink, 10%);
-    background-color: lighten($pink, 10%) ;
-  }
-  .status-section:nth-child(2) {
-    //border: solid 2px lighten($pink, 20%);
-    background-color: lighten($pink, 20%);
+  .status-section {
+    margin-top: 5px;
+    color: #333;
+    //background-color: white;
+    // border-width: 3px 0px 0px 0px;
+    // border-color: ($pink);
+    // border-style: solid;
   }
   .status-section:nth-child(3) {
-    //border: solid 2px lighten($pink, 30%);
-    background-color: lighten($pink, 30%);
+    // border-width: 3px 0px 3px 0px;
+    // margin-bottom: 5px;
   }
+  // .status-section:nth-child(1) {
+  //   //border: solid 2px lighten($pink, 10%);
+  //   //background-color: lighten($pink, 10%) ;
+  // }
+  // .status-section:nth-child(2) {
+  //   //border: solid 2px lighten($pink, 20%);
+  //   //background-color: lighten($pink, 20%);
+  // }
+  // .status-section:nth-child(3) {
+  //   //border: solid 2px lighten($pink, 30%);
+  //   //background-color: lighten($pink, 30%);
+  // }
 }
 
 .display-lists {
