--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,7 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #001745;
+$blue: rgba(255,42,107, 1);
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
