--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -2,9 +2,9 @@
   <div class="sidebar">
     <%= render partial: 'destinations/display_lists', locals: {destinations: @destinations} %>
   </div>
-  <div class="main-content">
+  <div class="main-content text-center">
     <%= form_tag(countries_path, method: :get) do %>
-      <%= text_field_tag :query %>
+      <%= text_field_tag :query, nil, placeholder: 'Enter country name' %>
       <%= submit_tag 'Search' %>
     <% end %>
     <%= render partial: 'countries/display_lists', locals: {countries: @countries} %>
