--- a/app/assets/stylesheets/pages/destination_select.scss
+++ b/app/assets/stylesheets/pages/destination_select.scss
@@ -19,6 +19,7 @@
   //background-color: rgba(210, 210, 210, 0.54);
   background-color: white;
   color: #282828;
+  //box-shadow: (0 0 3px #ff2a6b);
   box-shadow: 0 0 2px rgba(118, 118, 118, 0.78);
   display: flex;
   flex-direction: column;
