--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,18 +1,20 @@
-<div id="map" style="width: 100%; height: 600px;"></div>
+<div class="map-page">
+  <div id="map" style="width: 100%; height: 600px;"></div>
 
-<% content_for(:after_js) do %>
-  <script>
-    markers_json = <%=raw @hash.to_json %>;
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-     markers = handler.addMarkers(markers_json);
-     handler.bounds.extendWith(markers);
-     for (var i = 0; i < markers.length; i++) {
-        google.maps.event.addListener(markers[i].serviceObject, 'click', function(event) {
-          window.open(this.title);
-        });
-     }
-     handler.fitMapToBounds();
-    });
-  </script>
-<% end %>
+  <% content_for(:after_js) do %>
+    <script>
+      markers_json = <%=raw @hash.to_json %>;
+      handler = Gmaps.build('Google');
+      handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+       markers = handler.addMarkers(markers_json);
+       handler.bounds.extendWith(markers);
+       for (var i = 0; i < markers.length; i++) {
+          google.maps.event.addListener(markers[i].serviceObject, 'click', function(event) {
+            window.open(this.title);
+          });
+       }
+       handler.fitMapToBounds();
+      });
+    </script>
+  <% end %>
+</div>
