--- a/app/views/destinations/create.js.erb
+++ b/app/views/destinations/create.js.erb
@@ -1,4 +1,4 @@
-console.log("just kidding!!")
+console.log("No WAY!!")
 let divToUpdate = null;
 <% if @destination.status == 3 %>
   divToUpdate = $("#visitSoon");
